[project]
name = "comfyui_mittimi_recalculate_size"
description = "This is the node that performs the magnification calculation."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiRecalculateSize"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiRecalculateSize"
Icon = ""
